--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
   "author": "Erik Lopez",
   "license": "MIT",
   "dependencies": {
-    "next": "^14.0.4",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.6",
-    "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "5.3.3"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.3.3"
   }
 }
